web: Modify project configuration files to work with typescript - Rename js files to ts and tsx - Fix ts/tsx files requirements to run a build

--- a/client_web/.eslintrc.json
+++ b/client_web/.eslintrc.json
@@ -1,29 +1,22 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es2021": true
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb-typescript"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 11,
-        "sourceType": "module"
+        "project": "./tsconfig.json"
     },
     "plugins": [
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
         "linebreak-style": "off",
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-console": "off"
     }
 }
