--- a/client_web/package.json
+++ b/client_web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "eslint src/"
+    "lint": "eslint ./src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "firebase": "^8.6.0",
@@ -16,12 +16,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
     "eslint": "^7.26.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-loader": "^4.0.2",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "typescript": "^4.2.4"
   }
 }
