web: Add useful parameter types. Improve comments.

--- a/client_web/.eslintrc.json
+++ b/client_web/.eslintrc.json
@@ -17,6 +17,14 @@
     ],
     "rules": {
         "linebreak-style": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "jsx-a11y/anchor-is-valid": [
+            "error",
+            {
+              "components": ["Link"],
+              "specialLink": ["hrefLeft", "hrefRight"],
+              "aspects": ["noHref", "invalidHref", "preferButton"]
+            }
+          ]
     }
 }
