web: Improve documentation of file transfer hooks - Fix some warnings shown by eslint - Update dependencies

--- a/client_web/src/utils/firebase.js.template
+++ b/client_web/src/utils/firebase.js.template
@@ -1,4 +1,4 @@
-// Rename this file to "firestore.js" after filling the config object
+// Rename this file to "firebase.js" after filling the config object
 // with the data from the firebase project
 import firebase from 'firebase/app';
 import 'firebase/database'
