--- a/client_web/src/utils/firebase.js.template
+++ b/client_web/src/utils/firebase.js.template
@@ -1,9 +1,9 @@
-// Rename this file to "firestore.js" after filling the config object
-// with the data from the firebase project
-import firebase from 'firebase/app';
-import 'firebase/database'
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getDatabase } from "firebase/database";
 
-const config = {
+// Your web app's Firebase configuration
+const firebaseConfig = {
   apiKey: "",
   authDomain: "",
   databaseURL: "",
@@ -13,11 +13,7 @@ const config = {
   appId: ""
 };
 
-if (!firebase.apps.length) {
-  firebase.initializeApp(config);
-}
 
-// Firebase real time database
-const realTimeDatabase = firebase.database()
-
-export default realTimeDatabase;
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+export const realTimeDatabase = getDatabase(app);
