--- a/client_android/app/src/main/AndroidManifest.xml
+++ b/client_android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App">
+        android:theme="@style/Theme.WebRTCShare">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
