Fix AGP9 issues - Remove org.jetbrains.kotlin.android plugin. AGP has Kotlin support built in now. - Disable newDsl until we know more about the kotlin block error in app/build.gradle.kts.

--- a/client_android/gradle.properties
+++ b/client_android/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# TODO: REMOVE
+# After APG 9, the kotlin block in build.gradle.kts(:app) gives us an error (IDE) if we remove this.
+android.newDsl=false
