Use Google code scanner to scan the room id QR code - Check api availability before showing the "scan" button

--- a/client_android/gradle/libs.versions.toml
+++ b/client_android/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ hilt = "2.59.2"
 kotlin = "2.3.10"
 kotlinxSerialization = "1.10.0"
 ksp = "2.3.6"
+playServicesCodeScanner = "16.1.0"
 timber = "5.0.1"
 zxing = "3.5.4"
 
@@ -33,6 +34,7 @@ getstream-webrtc-android = { module = "io.getstream:stream-webrtc-android", vers
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+playServices-codeScanner = { module = "com.google.android.gms:play-services-code-scanner", version.ref = "playServicesCodeScanner" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 zxing = { group = "com.google.zxing", name = "core", version.ref = "zxing" }
 # TESTS
